src/objects/User.object
<CustomObject>
    <fields>
        <fullName>rC_Education__Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that User record is processed by &apos;User_InactivateRelationshipsBatchable&apos; batch job if set to true.</description>
        <inlineHelpText>Indicates that User record is processed by &apos;User_InactivateRelationshipsBatchable&apos; batch job if set to true.</inlineHelpText>
        <label>Is_Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Year_Recognition_Credit_Amount__c</fullName>
        <description>Dollar value of gifts on User where Recognition Credits were received for the current calendar year starting January 1.</description>
        <inlineHelpText>Dollar value of gifts on User where Recognition Credits were received for the current calendar year starting January 1.</inlineHelpText>
        <label>Current Year Recognition Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Year_Recognition_Credit_Count__c</fullName>
        <description>Number of gifts on User where Recognition Credits were received for the current calendar year starting January 1.</description>
        <inlineHelpText>Number of gifts on User where Recognition Credits were received for the current calendar year starting January 1.</inlineHelpText>
        <label>Current Year Recognition Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__First_Recognition_Credit_Amount__c</fullName>
        <description>Amount of first Recognition Credit received on User.</description>
        <inlineHelpText>Amount of first Recognition Credit received on User.</inlineHelpText>
        <label>First Recognition Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__First_Recognition_Credit_Date__c</fullName>
        <description>Date first Recognition Credit received on User.</description>
        <inlineHelpText>Date first Recognition Credit received on User.</inlineHelpText>
        <label>First Recognition Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Largest_Recognition_Credit_Amount__c</fullName>
        <description>Amount of largest Recognition Credit received on User.</description>
        <inlineHelpText>Amount of largest Recognition Credit received on User.</inlineHelpText>
        <label>Largest Recognition Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Largest_Recognition_Credit_Date__c</fullName>
        <description>Date largest Recognition Credit received on User.</description>
        <inlineHelpText>Date largest Recognition Credit received on User.</inlineHelpText>
        <label>Largest Recognition Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Last_Recognition_Credit_Amount__c</fullName>
        <description>Amount of last Recognition Credit received on User.</description>
        <inlineHelpText>Amount of last Recognition Credit received on User.</inlineHelpText>
        <label>Last Recognition Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Last_Recognition_Credit_Date__c</fullName>
        <description>Date last Recognition Credit received on User.</description>
        <inlineHelpText>Date last Recognition Credit received on User.</inlineHelpText>
        <label>Last Recognition Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Lifetime_Recognition_Credit_Amount__c</fullName>
        <description>Total dollar value of Recognition Credits this User has received.</description>
        <inlineHelpText>Total dollar value of Recognition Credits this User has received.</inlineHelpText>
        <label>Lifetime Recognition Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Lifetime_Recognition_Credit_Count__c</fullName>
        <description>Total number of gifts where this User has received Recognition Credits.</description>
        <inlineHelpText>Total number of gifts where this User has received Recognition Credits.</inlineHelpText>
        <label>Lifetime Recognition Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Prior_Year_Recognition_Credit_Amount__c</fullName>
        <description>Dollar value of gifts on User where Recognition Credits were received during the immediately prior calendar year.</description>
        <inlineHelpText>Dollar value of gifts on User where Recognition Credits were received during the immediately prior calendar year.</inlineHelpText>
        <label>Prior Year Recognition Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Prior_Year_Recognition_Credit_Count__c</fullName>
        <description>Number of gifts on User where Recognition Credits were received during the immediately prior calendar year.</description>
        <inlineHelpText>Number of gifts on User where Recognition Credits were received during the immediately prior calendar year.</inlineHelpText>
        <label>Prior Year Recognition Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Rollup_Recognition_Credits_Status__c</fullName>
        <description>Status of Recognition Credit information on User. Status of &apos;Ok&apos; means data is up to date.</description>
        <formula>IF(NOT(rC_Giving__Track_Recognition_Credits__c), &apos;Not Enabled&apos;, IF(ISBLANK(rC_Giving__Rollup_Recognition_Credits__c), &apos;Pending Refresh&apos;, &apos;Ok&apos;))</formula>
        <inlineHelpText>Status of Recognition Credit information on User. Status of &apos;Ok&apos; means data is up to date.</inlineHelpText>
        <label>Rollup Recognition Credits Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Rollup_Recognition_Credits__c</fullName>
        <description>Populated by trigger, indicates the date and time from the most recently updated Recognition Credit record.</description>
        <inlineHelpText>Indicates the date and time from the most recently updated Recognition Credit record.</inlineHelpText>
        <label>Rollup Recognition Credits</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Track_Recognition_Credits__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Track and display Recognition Credit information on User.</description>
        <inlineHelpText>Track and display Recognition Credit information on User.</inlineHelpText>
        <label>Track Recognition Credits?</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CREATED_BY_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>SUPER_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CREATED_BY_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>contains</operation>
            <value>stanford.edu.dev1</value>
        </filters>
        <filters>
            <field>CORE.USERS.TITLE</field>
            <operation>notContain</operation>
            <value>test</value>
        </filters>
        <label>SUPER Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Test_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CREATED_BY_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>contains</operation>
            <value>stanford.edu.dev1</value>
        </filters>
        <filters>
            <field>CORE.USERS.TITLE</field>
            <operation>contains</operation>
            <value>test</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Test Users</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>